--- a/SocketChat.API/appsettings.json
+++ b/SocketChat.API/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "CORS": "*",
+  "UrlLogin": "http://localhost:3000",
+  "AllowedHosts": "*",
+  "Origin": "",
+
   "Logging": {
     "LogLevel": {
       "Default": "Trace",
@@ -59,8 +64,6 @@
       }
     ]
   },
-
-  "AllowedHosts": "*",
 
   "ConnectionStrings": {
     "AppDB": "Server=127.0.0.1,1433;Database=SocketChatDB;User Id=SA;Password=yourStrong(!)Password"
