--- a/SocketChat.API/appsettings.Development.json
+++ b/SocketChat.API/appsettings.Development.json
@@ -1,9 +1,78 @@
 {
+  "CORS": "*",
+  "UrlLogin": "http://localhost:3000",
+  "AllowedHosts": "*",
+  "Origin": "",
+
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Trace",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+
+  "NLog": {
+    "internalLogLevel": "Info",
+    "internalLogFile": "/home/paulopacheco/.local/tmp/socketchat/Logging/internal-nlog-AspNetCore.txt",
+    "extensions": {
+      "NLog.Web.AspNetCore": {
+        "assembly": "NLog.Web.AspNetCore"
+      }
+    },
+    "targets": {
+      "debugFile": {
+        "type": "File",
+        "fileName": "/home/paulopacheco/.local/tmp/socketchat/Logging/App-Debug-${shortdate}.log",
+        "layout": "${longdate} [${uppercase:${level}}] ${message} ${exception:format=tostring}"
+      },
+      "prodFile": {
+        "type": "File",
+        "fileName": "/home/paulopacheco/.local/tmp/socketchat/Logging/App-Production-${shortdate}.log",
+        "layout": "${longdate} [${uppercase:${level}}] ${message} ${exception:format=tostring}"
+      },
+      "console": {
+        "type": "Console",
+        "layout": "$[${level:truncate=5:tolower=true}]: ${message} ${exception:format=tostring}"
+      }
+    },
+    "rules": [
+      {
+        "logger": "*",
+        "minLevel": "Trace",
+        "writeTo": "debugFile"
+      },
+      {
+        "logger": "*",
+        "minLevel": "Info",
+        "writeTo": "prodFile"
+      },
+      {
+        "logger": "*",
+        "minLevel": "Trace",
+        "writeTo": "console"
+      },
+      {
+        "logger": "Microsoft.*",
+        "maxLevel": "Info",
+        "final": "true"
+      },
+      {
+        "logger": "System.Net.Http.*",
+        "maxLevel": "Info",
+        "final": "true"
+      }
+    ]
+  },
+
+  "ConnectionStrings": {
+    "AppDB": "Server=127.0.0.1,1433;Database=SocketChatDB;User Id=SA;Password=yourStrong(!)Password"
+  },
+
+  "JwtOptions": {
+    "Issuer": "SocketChat",
+    "Audience": "WebClient",
+    "AccessValidFor": 43200,
+    "AccessSecret": "U29ja2V0Q2hhdEFjY2Vzc1NlY3JldEtleUNvZGVkSW5CYXNlNjQ="
   }
 }
